Fixed syntax for dark mode

--- a/index.css
+++ b/index.css
@@ -13,8 +13,8 @@ body {
       bottom: 0px;
       left: 0px;
       /*Something is weird here or in the javascript. I should actually learn how to code at some point.*/
-      --cloudOpacity: 1;
-      opacity: var(--cloudOpacity, 1);
+      --cloudOpacity: "1";
+      opacity: var(--cloudOpacity, "1");
       z-index: -1;
     }
     /*I wonder if this will also effect link logos. If so, bad things will happen.*/
